<?xml version="1.0"?>
<package format="3">
  <name>humanoid_robot_action_module</name>
  <version>0.3.0</version>
  <description>The humanoid_robot_action_module package </description>
  <license>Apache 2.0</license>

  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_robot_controller_msgs</build_depend>
  <build_depend>humanoid_robot_action_module_msgs</build_depend>
  <build_depend>humanoid_robot_framework_common</build_depend>
  <build_depend>humanoid_robot_device</build_depend>
  <build_depend>boost</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_controller_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_action_module_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_framework_common</build_export_depend>
  <build_export_depend>humanoid_robot_device</build_export_depend>
  <build_export_depend>boost</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>humanoid_robot_controller_msgs</exec_depend>
  <exec_depend>humanoid_robot_action_module_msgs</exec_depend>
  <exec_depend>humanoid_robot_framework_common</exec_depend>
  <exec_depend>humanoid_robot_device</exec_depend>
  <exec_depend>boost</exec_depend>

</package>
