<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_balance_control</name>
  <version>0.3.0</version>
  <description>The humanoid_robot_balance_control package</description>
  <license>Apache 2.0</license>

  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>humanoid_robot_math</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>humanoid_robot_math</build_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>humanoid_robot_math</exec_depend>
  <exec_depend>eigen</exec_depend>

</package>
