<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_direct_control_module</name>
  <version>0.3.0</version>
  <description>The humanoid_robot_direct_control_module package</description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/humanoid_robot_direct_control_module</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/humanoid_robot/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>humanoid_robot_kinematics_dynamics</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>robotis_controller_msgs</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>robotis_framework_common</build_export_depend>
  <build_export_depend>robotis_device</build_export_depend>
  <build_export_depend>robotis_math</build_export_depend>
  <build_export_depend>humanoid_robot_kinematics_dynamics</build_export_depend>
  <build_export_depend>boost</build_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robotis_controller_msgs</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>robotis_framework_common</exec_depend>
  <exec_depend>robotis_device</exec_depend>
  <exec_depend>robotis_math</exec_depend>
  <exec_depend>humanoid_robot_kinematics_dynamics</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>eigen</exec_depend>

</package>
