<?xml version="1.0"?>
<package format="3">
  <name>humanoid_robot_kinematics_dynamics</name>
  <version>0.3.0</version>
  <description>The humanoid_robot_kinematics_dynamics package</description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <condition if="$ROS_VERSION == 1">
    <build_depend>roscpp</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>humanoid_robot_math</build_depend>
    <build_depend>eigen</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>cmake_modules</build_export_depend>
    <build_export_depend>humanoid_robot_math</build_export_depend>
    <build_export_depend>eigen</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>humanoid_robot_math</exec_depend>
    <exec_depend>eigen</exec_depend>
  </condition>


  <condition if="$ROS_VERSION == 2">
    <build_depend>roscpp</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>humanoid_robot_math</build_depend>
    <build_depend>eigen</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>cmake_modules</build_export_depend>
    <build_export_depend>humanoid_robot_math</build_export_depend>
    <build_export_depend>eigen</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>humanoid_robot_math</exec_depend>
    <exec_depend>eigen</exec_depend>
  </condition>

</package>
